--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 import thinkBig from '../assets/images/think-big-scaled.jpg';
 ---
-<section class="w-full bg-white lg:pt-48">
+<section class="w-full bg-white pt-28 lg:pt-48">
   <div class="container mx-auto">
     <div class="grid grid-cols-12 gap-4">
       <div class="col-span-7 border-t">
