--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<section class="w-full bg-white lg:pt-48">
+<section class="w-full bg-white pt-28 lg:pt-48">
   <div class="container mx-auto">
     <div class="grid grid-cols-12 gap-4">
       <div class="col-span-12 border-t">
