--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets';
 import tokioAI from '../assets/images/tokio-ai.jpg';
 import motionSpeed from '../assets/images/motion-speed.jpg';
 ---
-<section class="w-full bg-white lg:pt-48 relative h-full">
+<section class="w-full bg-white pt-28 lg:pt-48 relative h-full">
   <div class="relative z-20">
     <div class="container mx-auto">
       <div class="grid grid-cols-12 gap-4">
