--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -12,7 +12,7 @@ const services: ServiceItem[] = [
   { title: 'SEO Optimization', body: 'I can help you optimize your website for search engines.', icon: ''},
 ];
 ---
-<section class="w-full bg-white lg:pt-48">
+<section class="w-full bg-white pt-28 lg:pt-48">
   <div class="container mx-auto">
     <div class="grid grid-cols-12 gap-4">
       <div class="col-span-12 border-t">
