Fixed mission on responsive viewport

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,14 +5,14 @@ import thinkBig from '../assets/images/think-big-scaled.jpg';
 <section class="w-full bg-white pt-28 lg:pt-48">
   <div class="container mx-auto">
     <div class="grid grid-cols-12 gap-4">
-      <div class="col-span-7 border-t">
+      <div class="col-span-12 lg:col-span-7 border-t">
         <div class="py-5 flex justify-between">
           <span class="">(WHO)</span>
           <span class="">01</span>
         </div>
         <h2 class="text-5xl font-bold">About me</h2>
       </div>
-      <div class="col-span-4 lg:col-end-13">
+      <div class="col-span-12 lg:col-span-4 lg:col-end-13">
         <Image src={thinkBig} alt="About me"/>
       </div>
     </div>
