--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -7,7 +7,7 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
   <div class="relative z-20">
     <div class="container mx-auto">
       <div class="grid grid-cols-12 gap-4">
-        <div class="col-span-4 col-end-13 border-t z-10">
+        <div class="col-span-12 lg:col-span-4 lg:col-end-13 border-t z-10">
           <div class="py-5 flex justify-between">
             <span class="uppercase">(Mission)</span>
             <span class="">02</span>
@@ -15,21 +15,20 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
         </div>
       </div>
     </div>
-    <div class="py-48">
     <div class="absolute bg-white w-full h-full top-0 z-0">
       <div class="container mx-auto bg-white h-full">
         <div class="grid grid-cols-12 gap-4 bg-white h-full">
-          <div class="col-span-4 lg:col-start-4">
+          <div class="col-span-8 col-start-3 lg:col-span-4 lg:col-start-4">
             <Image src={motionSpeed} alt="Mission" class="h-full object-cover"/>
           </div>
         </div>
       </div>
     </div>
-    <div class="z-10 mix-blend-difference px-8">
+    <div class="z-10 mix-blend-difference px-8 py-48">
       <h3 class="font-display text-white uppercase font-[800] text-left w-full leading-none relative block mix-blend-difference" style="font-size: 10.7vw;">Accessible</h3>
       <h3 class="font-display text-white uppercase font-[800] text-right w-full leading-none relative block" style="font-size: 10.7vw;">Superfast</h3>
       <h3 class="font-display text-white uppercase font-[800] text-center w-full leading-none relative block" style="font-size: 10.7vw;">Just cool</h3>
     </div>
-    </div>
+    
   </div>
 </section>
