Fixed mission on responsive viewport

--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -5,6 +5,7 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
 ---
 <section class="w-full bg-white pt-28 lg:pt-48 relative h-full">
   <div class="relative z-20">
+    <div class="relative lg:absolute w-full">
     <div class="container mx-auto">
       <div class="grid grid-cols-12 gap-4">
         <div class="col-span-12 lg:col-span-4 lg:col-end-13 border-t z-10">
@@ -15,6 +16,8 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
         </div>
       </div>
     </div>
+    </div>
+    <div class="py-48 relative">
     <div class="absolute bg-white w-full h-full top-0 z-0">
       <div class="container mx-auto bg-white h-full">
         <div class="grid grid-cols-12 gap-4 bg-white h-full">
@@ -24,11 +27,11 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
         </div>
       </div>
     </div>
-    <div class="z-10 mix-blend-difference px-8 py-48">
+    <div class="z-10 mix-blend-difference px-8">
       <h3 class="font-display text-white uppercase font-[800] text-left w-full leading-none relative block mix-blend-difference" style="font-size: 10.7vw;">Accessible</h3>
       <h3 class="font-display text-white uppercase font-[800] text-right w-full leading-none relative block" style="font-size: 10.7vw;">Superfast</h3>
       <h3 class="font-display text-white uppercase font-[800] text-center w-full leading-none relative block" style="font-size: 10.7vw;">Just cool</h3>
     </div>
-    
+    </div>
   </div>
 </section>
