Added mobile menu

--- a/src/components/Claim.astro
+++ b/src/components/Claim.astro
@@ -8,7 +8,7 @@
 
 <script>
   import { gsap } from 'gsap';
-  const words = ['dev<span id="dot">.</span>', 'design.', 'sites.', 'tech.', 'things.'];
+  const words = ['dev<span id="dot">.</span>', 'design.', 'sites.', 'ux-ui.', 'things.'];
   const scrollDown = document.getElementById('scroll-down');
   const change = () => {
     const word = document.getElementById('word');
