--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ import arrowDownRightWhite from '../assets/images/arrow-down-right-white.svg';
 
 
 <Layout title="Welcome to Piergorelli.com">
-	<Header textColor="black" headerClasses=""/>
+	<Header textColor="black" headerClasses="bg-white"/>
 	<main class="h-screen">
 
 	</main>
