Added contact form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Hero from '../components/Hero.astro';
 		<Hero/>
     <About/>
     <Mission/>
-    <Services/>
+    <Services size={58} strokeWidth={2} customClasses='text-boulder-500'/>
     <Blog/>
 	</main>
   <Footer />
