--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -15,7 +15,7 @@
       </div>
       <div class="col-span-12 lg:col-span-7 lg:col-start-6">
         <div class="flex flex-col">
-          <form method="POST" data-netlify="true">
+          <form method="POST" name="contact" data-netlify="true">
             <div class="flex flex-col mb-8">
               <label for="name" class="text-2xl">Name:</label>
               <input type="text" id="name" name="name" class="text-2xl border border-gray-300 p-2 mt-2 rounded-lg py-4 px-6" required>
