--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -4,14 +4,16 @@
 <section class="w-full bg-white pt-28 lg:pt-48">
   <div class="px-8">
     <div class="grid grid-cols-12 gap-4">
-      <div class="col-span-12 border-b">
+      <div class="col-span-12 border-b mb-10">
         <div class="py-5 flex flex-col justify-between">
           <span class="">04</span>
           <h2 class="text-4xl font-semibold uppercase">Email me</h2>
         </div>
       </div>
       <div class="col-span-12 lg:col-span-4">
-        testo
+        <span class="text-2xl">
+          Whether you want to discuss a project, share ideas, or just say hello, I’m here to connect. Fill out the form below, and let’s create something amazing together.
+        </span>
       </div>
       <div class="col-span-12 lg:col-span-7 lg:col-start-6">
         <div class="flex flex-col">
